...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hje-xw-p5A" userLabel="searchView">
                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                <subviews>
                                    <searchBar contentMode="redraw" placeholder="Song or Artist Name" translatesAutoresizingMaskIntoConstraints="NO" id="jE6-9C-7GG" userLabel="searchBar">
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </searchBar>
                                </subviews>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
...
                            <constraint firstItem="3g8-NM-2pU" firstAttribute="top" secondItem="hje-xw-p5A" secondAttribute="bottom" id="oKM-do-Gwe"/>
                            <constraint firstItem="hje-xw-p5A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="rom-Ek-Mez"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3g8-NM-2pU" secondAttribute="trailing" id="vxG-Tt-fFp"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="iTune Music Search" id="3pP-4E-4ob"/>
                    <connections>
                        <outlet property="searchBar" destination="jE6-9C-7GG" id="mmG-Il-lKh"/>
                        <outlet property="tableView" destination="3g8-NM-2pU" id="DXc-IX-bqi"/>
                        <segue destination="06y-dG-6Js" kind="show" identifier="segueToTrackDetail" id="GwR-eH-zbh"/>
                    </connections>
                </viewController>
...
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lUo-U4-vdJ" userLabel="buttonStack">
                                <rect key="frame" x="8" y="230" width="359" height="40"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="umq-q9-8bW" userLabel="listen">
                                        <rect key="frame" x="0.0" y="3.5" width="114.5" height="33"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <state key="normal" title="Listen">
                                            <color key="titleColor" red="1" green="0.47875802580102722" blue="0.30587385374459197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="listen:" destination="06y-dG-6Js" eventType="touchUpInside" id="k65-6w-X52"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kwU-nj-L1F">
                                        <rect key="frame" x="122.5" y="3.5" width="114" height="33"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <state key="normal" title="TrackView">
                                            <color key="titleColor" red="1" green="0.51152288206180763" blue="0.92512877828175477" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="viewTrack:" destination="06y-dG-6Js" eventType="touchUpInside" id="BDM-6H-4US"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eBX-s2-Aep">
                                        <rect key="frame" x="244.5" y="3.5" width="114.5" height="33"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                        <state key="normal" title="ArtistView">
                                            <color key="titleColor" red="0.62798501432408749" green="0.41648392923988997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="viewArtist:" destination="06y-dG-6Js" eventType="touchUpInside" id="4PZ-M3-4lo"/>
                                        </connections>
                                    </button>
...
